--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:client": "vite",
     "build": "npm run build:server && npm run build:client",
     "build:server": "tsc -p tsconfig.server.json",
-    "build:client": "vite build",
+    "build:client": "echo Client assets already in public/ directory",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:e2e": "playwright test",
