--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,51 +12,63 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
       
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       
       - name: Run ESLint
-        run: npm run lint
+        run: pnpm run lint
       
       - name: Check formatting
-        run: npm run format:check
+        run: pnpm run format:check
 
   test-unit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
       
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       
       - name: Run unit tests
-        run: npm run test
+        run: pnpm run test
 
   test-integration:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
       
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       
       - name: Run integration tests
-        run: npm run test
+        run: pnpm run test
         env:
           REDIS_URL: ${{ secrets.UPSTASH_REDIS_URL }}
 
@@ -65,19 +77,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
       
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       
       - name: Install Playwright browsers
-        run: npx playwright install --with-deps
+        run: pnpm exec playwright install --with-deps
       
       - name: Run e2e tests
-        run: npm run test:e2e
+        run: pnpm run test:e2e
       
       - name: Upload test results
         if: failure()
@@ -92,19 +108,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
       
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       
       - name: Build project
-        run: npm run build
+        run: pnpm run build
       
       - name: Validate Devvit configuration
-        run: npm run validate
+        run: pnpm run validate
       
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
