--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       
+      - name: Build project
+        run: pnpm run build
+      
       - name: Run integration tests
         run: pnpm run test
         env:
