--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,13 @@ PORT=3000
 # Redis Configuration (upstash)
 UPSTASH_REDIS_URL=upstash-redis-url
 
+# Security Configuration
+# USER_ID_PEPPER: Secret value used for hashing user IDs to protect privacy
+# IMPORTANT: This value MUST be consistent across all deployments (dev, staging, prod)
+# Generate a secure random value using: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+# DO NOT change this value after initial deployment - it will invalidate all existing user data
+USER_ID_PEPPER=your-secure-random-pepper-value-here
+
 # Vertex AI Configuration (for later phases)
 # Uncomment and configure when implementing AI features
 # GCP_PROJECT_ID=your-project-id
