feat(seeding-engine): Complete Phase 2 Seeding Engine Implementation
- Implement comprehensive SeedingService with deterministic daily seed generation
- Add DAILY_SEED_SECRET environment configuration with secure generation guidelines
- Create integration and performance tests for seeding engine
- Add extensive error handling and validation for seeding operations
- Implement logging and debugging capabilities for seeding processes
- Update .env.example with detailed configuration instructions
- Add new test files for server startup, seeding, and error handling verification
- Update project documentation and task tracking for Phase 2 implementation
- Integrate seeding service with server startup sequence
- Enhance cryptographic randomness and word selection algorithms

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,19 @@ UPSTASH_REDIS_URL=upstash-redis-url
 # DO NOT change this value after initial deployment - it will invalidate all existing user data
 USER_ID_PEPPER=your-secure-random-pepper-value-here
 
+# DAILY_SEED_SECRET: Secret key used for deterministic daily seed generation via HMAC-SHA256
+# CRITICAL: This value MUST be consistent across ALL deployments (dev, staging, prod)
+# Changing this value will alter all word generation - historical seeds will produce different results
+# Generate a secure 64-character hex string using: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+# This ensures cryptographic-quality randomness for the seeding engine
+DAILY_SEED_SECRET=your-secure-64-char-hex-string-here
+
+# DEBUG_SEEDING: Enable verbose logging for seeding operations (optional)
+# Set to 'true' to enable detailed debug logs for word selection algorithms
+# Logs include: PRNG states, slot selections, cluster tracking, wildcard selection
+# WARNING: Debug mode significantly increases log volume - use only for troubleshooting
+# DEBUG_SEEDING=false
+
 # Vertex AI Configuration (for later phases)
 # Uncomment and configure when implementing AI features
 # GCP_PROJECT_ID=your-project-id
